Mudança na forma de compilação/execução